--- a/app/views/events/filtered_index.html.erb
+++ b/app/views/events/filtered_index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title,'検索結果') %>
 <div class="container d-flex justify-content-center">
   <div class="row col-md-8 custyle ">
     <table class="table table-striped custab">
