--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -1,22 +1,16 @@
-<div class="chat-room-show-page">
+<% provide(:title,'チャットルーム') %>
+<div class="chat-room-show-page my-3">
   <nav class="p-3 border-bottom">
     <div class="chat-room__partner">
       <span class="chat-room__partner-name">
-        <%= @chat_room_user.name %>
+        <%= link_to @chat_room_user.name, user_path(@chat_room_user),class: "user-name" %>
       </span>
-
-      <% if @chat_room_user.profile_image.url.nil? %>
-        <div class="chat-room__partner-default-img"></div>
-      <% else %>
         <%= image_tag @chat_room_user.profile_image.url, class: "chat-room__partner-img" %>
-      <% end %>
     </div>
   </nav>
- 
   <div id='chat-messages'>
     <%= render @chat_messages %>
   </div>
-
   <form class="chat-room__message-form">
     <textarea data-behavior="chat_room_speaker" data-chat_room_id="<%= @chat_room.id %>" placeholder="メッセージを入力" class="chat-room__message-form_textarea"></textarea>
   </form>
