--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title,'イベント日程') %>
 <div class="container d-flex justify-content-center">
   <div class="row col-md-8 custyle">
     <table class="table table-striped custab">
