--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,6 +18,7 @@
           </li>
           <li class="nav-item"><%= link_to "募集投稿", events_path, class: "nav-link" %></li>
         <% else %>
+          <li class="nav-item"><%= link_to "ゲストログイン", users_guest_sign_in_path, method: :post, class: "btn btn-outline-light me-3" %></li>
           <li class="nav-item"><%= link_to "ログイン", new_user_session_path, class: "btn btn-outline-light me-3" %></li>
           <li class="nav-item"><%= link_to "簡単登録", new_user_registration_path, class: "btn btn-outline-light me-3" %></li>
         <% end %>
