--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -13,19 +13,44 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8">
-      <div class="row">
-        <% @event_listings.each do |event_listing| %>
-          <div class="col-lg-6">
-            <%= render 'shared/event_listing_card', event_listing: event_listing %>
-          </div>
-        <% end %>
-      </div>
-      <nav aria-label="Pagination">
-        <hr class="my-0" />
-        <ul class="pagination justify-content-center my-4">
-        <%= will_paginate @event_listings %>
-        </ul>
+      <nav>
+        <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
+          <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">新着投稿</button>
+          <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">人気投稿</button>
+        </div>
       </nav>
+      <div class="tab-content py-3 px-3 px-sm-0" id="nav-tabContent">
+        <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+          <div class="row">
+            <% @event_listings.each do |event_listing| %>
+              <div class="col-lg-6">
+                <%= render 'shared/event_listing_card', event_listing: event_listing %>
+              </div>
+            <% end %>
+          </div>
+          <nav aria-label="Pagination">
+            <hr class="my-0" />
+            <ul class="pagination justify-content-center my-4">
+              <%= will_paginate @event_listings %>
+             </ul>
+          </nav>
+        </div>
+        <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+          <div class="row">
+            <% @favorite_event_listings.each do |event_listing| %>
+              <div class="col-lg-6">
+                <%= render 'shared/event_listing_card', event_listing: event_listing %>
+              </div>
+            <% end %>
+          </div>
+          <nav aria-label="Pagination">
+            <hr class="my-0" />
+            <ul class="pagination justify-content-center my-4">
+              <%= will_paginate @favorite_event_listings %>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </div>
     <div class="col-lg-4">
       <div class="card mb-4">
