--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">メニュー</a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><%= link_to "マイページ", user_path(current_user), class: "dropdown-item" %></li>
-              <li><a class="dropdown-item" href="/events">募集投稿</a></li>
+              <li><%= link_to '募集投稿', events_path, class: 'dropdown-item' %></li>
               <li><%= link_to "DM一覧", favorites_user_path(current_user), class: "dropdown-item" %></li>
               <li><%= link_to "お気に入り一覧", favorites_user_path(current_user), class: "dropdown-item" %></li>
               <li><hr class="dropdown-divider" /></li>
