トップページの表示順をを修正

--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -12,6 +12,6 @@
     <%= render @chat_messages %>
   </div>
   <form class="chat-room__message-form">
-    <textarea data-behavior="chat_room_speaker" data-chat_room_id="<%= @chat_room.id %>" placeholder="メッセージを入力" class="chat-room__message-form_textarea"></textarea>
+    <textarea data-behavior="chat_room_speaker" data-chat_room_id="<%= @chat_room.id %>" placeholder="Enterを2回押してメッセージを送信" class="chat-room__message-form_textarea"></textarea>
   </form>
 </div>
