--- a/app/views/event_listings/show.html.erb
+++ b/app/views/event_listings/show.html.erb
@@ -3,20 +3,20 @@
   <main>
     <div class="row py-5 justify-content-center">
       <div class="col-lg-8">
-          <div class="d-flex justify-content-between">
-            <%= link_to "ホームへ戻る",root_path,class: "eventlisting-edit-btn" %>
-            <% if current_user == @event_listing.user %>
-              <div>
-                <%=link_to "投稿編集",[:edit, @event_listing.event, @event_listing],class: "eventlisting-edit-btn" %>
-                <%=link_to "投稿削除",[@event_listing.event, @event_listing],method: :delete,data: { confirm: '削除してもよろしいですか？'},class: "eventlisting-edit-btn" %>
-              </div>
-            <% else %>
-              <%= render "favorites/favorite" %>
-            <% end %>
-          </div>
+        <div class="d-flex justify-content-between">
+          <%= link_to "ホームへ戻る", root_path, class: "eventlisting-edit-btn" %>
+          <% if current_user == @event_listing.user %>
+            <div>
+              <%= link_to "投稿編集", [:edit, @event_listing.event, @event_listing], class: "eventlisting-edit-btn" %>
+              <%= link_to "投稿削除", [@event_listing.event, @event_listing], method: :delete, data: { confirm: '削除してもよろしいですか？' }, class: "eventlisting-edit-btn" %>
+            </div>
+          <% else %>
+            <%= render "favorites/favorite" %>
+          <% end %>
+        </div>
         <hr class="my-2">
         <div class="row justify-content-center">
-          <div class="col-lg-9"> 
+          <div class="col-lg-9">
             <div class="card border border-info shadow-0 mb-3">
               <div class="card-header d-flex justify-content-between">
                 <span>
@@ -30,19 +30,19 @@
                 <div class="card-title d-flex justify-content-between p-2">
                   <div>
                     <%= image_tag @event_listing.user.profile_image.url, class: "card-image rounded-circle" %>
-                    <%= link_to @event_listing.user.name, @event_listing.user,class:"user-name" %>
+                    <%= link_to @event_listing.user.name, @event_listing.user, class: "user-name" %>
                   </div>
                   <div>
                     <%= link_to "DM", chat_rooms_path(params: { user_id: @event_listing.user.id }), method: :post, class: "p-2 profile-edit-btn" if current_user != @event_listing.user %>
                   </div>
                 </div>
-                <h5 class="card-title px-2"> <%= @event_listing.title %></h5>
+                <h5 class="card-title px-2"><%= @event_listing.title %></h5>
                 <hr class="my-2">
-                <p class="card-text p-2"> <%= @event_listing.message %></p>
+                <p class="card-text p-2"><%= @event_listing.message %></p>
               </div>
               <div class="card-footer d-flex justify-content-between">
-              <span><%= @event_listing.has_ticket ? "チケット有" : "チケット無" %></span>
-              <span><%= "締切  #{@event_listing.deadline.strftime("%m/%d")}" %></span>
+                <span><%= @event_listing.has_ticket ? "チケット有" : "チケット無" %></span>
+                <span><%= "締切 #{@event_listing.deadline.strftime("%m/%d")}" %></span>
               </div>
             </div>
           </div>
@@ -52,28 +52,62 @@
               <%= f.label :comment, "参加コメント", class: "form-label" %>
               <%= f.text_field :comment, class: "form-control" %>
               <hr class="my-2">
-              <h6><%= "参加メンバー(募集人数#{@event_listing.capacity}人)" %></h6>
-              <% @event_registrations.each do |event_registration| %>
-                <% if event_registration.user.present? %>
-                  <div class="my-3 d-flex justify-content-between">
-                    <div>
-                      <%= image_tag event_registration.user.profile_image.url, class: "card-image rounded-circle" %>
-                      <%= link_to event_registration.user.name, event_registration.user,class:"user-name" %>
-                      <%= event_registration.comment %>
+              <h6><%= "承認待ちのメンバー" %></h6>
+              <% if @pending_event_registrations.present? %>
+                <% @pending_event_registrations.each do |event_registration| %>
+                  <% if event_registration.user.present? %>
+                    <div class="my-3 d-flex justify-content-between">
+                      <div>
+                        <%= image_tag event_registration.user.profile_image.url, class: "card-image rounded-circle" %>
+                        <%= link_to event_registration.user.name, event_registration.user, class: "user-name" %>
+                        <%= event_registration.comment %>
+                      </div>
+                      <div class="col-3">
+                        <%= link_to "DM", chat_rooms_path(params: { user_id: event_registration.user.id }), method: :post, class: "profile-edit-btn" if current_user != event_registration.user %>
+                        <% if @event_listing.user == current_user %>
+                          <%= link_to "承認", approve_event_registration_path(event_registration), method: :patch, class: "profile-edit-btn" %>
+                          <%= link_to "見送る", event_registration_path(event_registration), method: :delete, data: { confirm: '参加をキャンセルしてもよろしいですか' }, class: "profile-edit-btn" %>
+                        <% end %>
+                      </div>
                     </div>
-                    <div class="mx-5">
-                      <%= link_to "DM", chat_rooms_path(params: { user_id: event_registration.user.id }), method: :post, class: "profile-edit-btn" if current_user != event_registration.user %>
-                    </div>
-                  </div>
+                  <% end %>
                 <% end %>
+              <% else %>
+                <div class="my-3 text-center">
+                  <p>承認待ちのメンバーはいません。</p>
+                </div>
               <% end %>
               <hr class="my-2">
-              <% if  current_user == @event_listing.user %>
-                <%= f.submit "参加済", class: "w-100 btn btn-primary btn-lg",disabled: true %>
-              <% elsif current_user.present? && @event_registrations.any? { |r| r.user == current_user } %>
-                <%= link_to "参加をキャンセル",event_registration_path(@event_registration),method: :delete,data: { confirm: 'キャンセルしてもよろしいですか' }, class: "w-100 btn btn-primary btn-lg" %>
-              <% elsif @event_listing.capacity-@event_registrations.count == 0 || Date.today > @event_listing.deadline  %>
-                <%= f.submit "募集締切", class: "w-100 btn btn-primary btn-lg",disabled: true %>
+              <h6><%= "参加メンバー(募集人数#{ @event_listing.capacity }人)" %></h6>
+              <% if @accepted_event_registrations.present? %>
+                <% @accepted_event_registrations.each do |event_registration| %>
+                  <% if event_registration.user.present? %>
+                    <div class="my-3 d-flex justify-content-between">
+                      <div>
+                        <%= image_tag event_registration.user.profile_image.url, class: "card-image rounded-circle" %>
+                        <%= link_to event_registration.user.name, event_registration.user, class: "user-name" %>
+                        <%= event_registration.comment %>
+                      </div>
+                      <div class="mx-5">
+                        <%= link_to "DM", chat_rooms_path(params: { user_id: event_registration.user.id }), method: :post, class: "profile-edit-btn" if current_user != event_registration.user %>
+                      </div>
+                    </div>
+                  <% end %>
+                <% end %>
+              <% else %>
+                <div class="my-3 text-center">
+                  <p>参加メンバーはいません。</p>
+                </div>
+              <% end %>
+              <hr class="my-2">
+              <% if current_user == @event_listing.user %>
+                <%= f.submit "参加済", class: "w-100 btn btn-primary btn-lg", disabled: true %>
+              <% elsif current_user.present? && @pending_event_registrations.any? { |r| r.user == current_user } %>
+                <%= f.submit "承認待ち", class: "w-100 btn btn-primary btn-lg", disabled: true %>
+              <% elsif current_user.present? && @accepted_event_registrations.any? { |r| r.user == current_user } %>
+                <%= link_to "参加をキャンセル", event_registration_path(@current_user_event_registration), method: :delete, data: { confirm: 'キャンセルしてもよろしいですか' }, class: "w-100 btn btn-primary btn-lg" %>
+              <% elsif @event_listing.capacity - @accepted_event_registrations.count == 0 || Date.today > @event_listing.deadline %>
+                <%= f.submit "募集締切", class: "w-100 btn btn-primary btn-lg", disabled: true %>
               <% else %>
                 <%= f.submit "参加する", class: "w-100 btn btn-primary btn-lg" %>
               <% end %>
